# Advanced-RVC-Inference

./: .env  .env.example  .gitignore  .path_manager.py  6.0.0  API_USAGE.md  Advanced-RVC-COLAB-FIX.ipynb  Advanced-RVC-NoUI.ipynb  Advanced-RVC-no-ui.ipynb  Advanced-RVC.ipynb  CHANGELOG.md  CLI_README.md  CODE_OF_CONDUCT.md  COLAB-INSTALLATION-GUIDE.md  COLAB-QUICK-FIX.md  COLAB_BADGE_CODE.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION_OVERHAUL_SUMMARY.md  Dockerfile.apple  Dockerfile.rocm  ENHANCED_IMPORT_FIXES_README.md  ENHANCEMENT_SUMMARY.md  F0_AUTO_LOADER_UPDATE.md  FIXED_COLAB_BADGE.md  FUNDING.yml  IMPROVEMENTS_SUMMARY.md  KADVC-DOCUMENTATION.md  LICENSE  MANIFEST.in  PYTHON_VERSION_UPGRADE.md  README.md  README_ENHANCED.md  REFACTORING_GUIDE.md  REFACTORING_REPORT.md  SETUP_GUIDE.md  TABS-RESTRUCTURING.md  TRAINING-FEATURES.md  TRANSLATION.md  VIETNAMESE_RVC_INTEGRATION_SUMMARY.md  (+90 more)
advanced_rvc_inference/: __init__.py  __main__.py  _version.py  api.py  app.py  cli.py  core.py  enhanced_training.py  gpu_optimization.py  gui.py  krvc_kernel.py  main.py  mainjs.py  parser.py  pyproject.toml  requirements.txt  run_tensorboard.py  separate_music.py  setup.py  variables.py
advanced_rvc_inference/api/: __init__.py  api.py  cli.py  cli_complete.py  parser.py
advanced_rvc_inference/app/: __init__.py  app.py  easy_gui.py  ez.py  gui.py  mainjs.py  run_tensorboard.py
advanced_rvc_inference/app/tabs/: __init__.py
advanced_rvc_inference/assets/: __init__.py  config.json  config.txt  discord_presence.py  youtube.txt
advanced_rvc_inference/assets/audios/: __init__.py
advanced_rvc_inference/assets/i18n/: i18n.py
advanced_rvc_inference/assets/languages/: ID-EYD.json  ar-SA.json  bg-BG.json  bn-BD.json  ca-ES.json  cs-CZ.json  da-DK.json  de-DE.json  el-GR.json  en-US.json  es-ES.json  et-EE.json  fa-IR.json  fi-FI.json  fr-FR.json  he-IL.json  hi-IN.json  hr-HR.json  hu-HU.json  id-ID.json  it-IT.json  ja-JP.json  ko-KR.json  lt-LT.json  lv-LV.json  ms-MY.json  nl-NL.json  no-NO.json  pl-PL.json  pt-BR.json  ro-RO.json  ru-RU.json  sk-SK.json  sl-SI.json  sv-SE.json  sw-KE.json  th-TH.json  tl-PH.json  tr-TR.json  uk-UA.json  (+4 more)
advanced_rvc_inference/assets/models/: __init__.py
advanced_rvc_inference/assets/presets/: Default.json  Good for Anything.json  Music.json  __init__.py
advanced_rvc_inference/assets/themes/: themes_list.json
advanced_rvc_inference/assets/weights/: __init__.py
advanced_rvc_inference/assets/zluda/: __init__.py  path-zluda-hip57.bat  path-zluda-hip61.bat  path-zluda-hip62.bat
advanced_rvc_inference/configs/: __init__.py  config.json  config.py  rpc.py
advanced_rvc_inference/configs/pcph_gan/: 32000.json  40000.json  48000.json
advanced_rvc_inference/configs/ringformer_v2/: 24000.json  32000.json  40000.json  48000.json
advanced_rvc_inference/configs/v1/: 24000.json  32000.json  40000.json  48000.json
advanced_rvc_inference/configs/v2/: 32000.json  40000.json  44100.json  48000.json
advanced_rvc_inference/core/: convert.py  csrt.py  download_music.py  downloads.py  f0_extract.py  inference.py  model_utils.py  presets.py  process.py  real_time_voice_conversion.py  realtime.py  realtime_client.py  restart.py  separate.py  training.py  tts.py  ui.py  utils.py
advanced_rvc_inference/engine/: __init__.py
advanced_rvc_inference/engine/inference/: audio_processing.py  convert.py  create_reference.py  inference.py  pipeline.py
advanced_rvc_inference/engine/models/: utils.py
advanced_rvc_inference/engine/realtime/: __init__.py  audio.py  callbacks.py  pipeline.py  realtime.py
advanced_rvc_inference/engine/speaker/: embedding.py  encoder.py  features.py  parameter_transfer.py  segment.py  whisper.py
advanced_rvc_inference/engine/training/: __init__.py  create_dataset.py  create_index.py
advanced_rvc_inference/engine/uvr/: separate_music.py
advanced_rvc_inference/infer/: __init__.py  create_reference.py  separate_music.py
advanced_rvc_inference/infer/extracting/: __init__.py  embedding.py  extract.py  feature.py  preparing_files.py  rms.py
advanced_rvc_inference/infer/full_inference/: README.md  __init__.py  full_inference.py
advanced_rvc_inference/infer/realtime/: audio.py  callbacks.py  pipeline.py  realtime.py
advanced_rvc_inference/infer/rvc/: __init__.py  audio_processing.py  convert.py  pipeline.py
advanced_rvc_inference/infer/train/: create_dataset.py  create_index.py
advanced_rvc_inference/lib/: __init__.py  directml.py  i18n.py  opencl.py  path_manager.py  rich_logging.py  torch_audiomentations_integration.py  torchfx_integration.py  unified_performance_optimization.py  utils.py  zulda.py
advanced_rvc_inference/lib/algorithm/: __init__.py  attentions.py  commons.py  discriminators.py  encoders.py  modules.py  normalization.py  residuals.py  stftpitchshift.py  (+1 more)
advanced_rvc_inference/models/: __init__.py  utils.py
advanced_rvc_inference/msep/: __init__.py  ensemble.py  inference.py  utils.py
advanced_rvc_inference/music_separation_code/: inference.py
advanced_rvc_inference/rvc/: __init__.py  convert.py  csrt.py  downloads.py  f0_extract.py  inference.py  model_utils.py  presets.py  process.py  realtime.py  realtime_client.py  restart.py  separate.py  training.py  tts.py  ui.py  utils.py
advanced_rvc_inference/services/: __init__.py  csrt.py  downloads.py  f0_extract.py  model_utils.py  presets.py  process.py  realtime.py  realtime_client.py  restart.py  separate.py  training.py  tts.py  utils.py
advanced_rvc_inference/tabs/: __init__.py  config_options.py  core.py  download_model.py  download_music.py  embedders.py  enhancement.py  extra.py  f0_extractor.py  full_inference.py  full_inference_tab.py  model_manager.py  plugins.py  real_time.py  settings.py  training.py
advanced_rvc_inference/tools/: __init__.py  gdown.py  meganz.py
advanced_rvc_inference/ui/: __init__.py  feedback.py
advanced_rvc_inference/utils/: __init__.py  feedback.py  gdown.py  huggingface.py  meganz.py  noisereduce.py  variables.py
advanced_rvc_inference/uvr/: __init__.py  constants.py  core.py  separate_music.py
(+1497 files in other folders)
