[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-rvc-inference"
version = "0.1.0"
description = "Advanced RVC Inference - A state-of-the-art web UI for rapid and effortless inference."
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = {file = "LICENSE"}
authors = [
    {name = "ArkanDash"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Platform-specific requirements
    "pip>=23.3",
    "wheel",
    "omegaconf>=2.0.6",
    "onnxruntime; sys_platform == 'darwin'",
    "onnxruntime-gpu; sys_platform != 'darwin'",
    
    # Core dependencies
    "PyYAML>=6.0",
    "tiktoken",
    "hyperpyyaml",
    "torch>=2.3.1",
    "tqdm>=4.63.1",
    "sortedcontainers",
    "torchvision>=0.18.1",
    "torchaudio>=2.3.1",
    "torchcodec>=0.8.1",
    
    # FAISS with version constraints
    "faiss-cpu==1.7.3; python_version < '3.12'",
    "faiss-cpu>=1.7.3; python_version >= '3.12'",
    
    # Machine learning, NLP and deep learning
    "transformers>=4.49.0",
    "scikit-learn",
    "einops>=0.8.0",
    
    # Pitch and sound processing
    "librosa>=0.10.2",
    "pydub>=0.25.1",
    "praat-parselmouth",
    "soundfile>=0.13.0",
    "pedalboard",
    
    # Data processing and calculation
    "numpy>=1.25.2,<2.0.0",
    "numba>=0.57.0",
    "scipy>=1.15.0",
    "matplotlib>=3.7.2",
    
    # Implementation and web framework
    "gradio>=5.23.3,<6.0.0",
    "requests>=2.32.3",
    "aiohttp",
    "pysrt",
    
    # Utility section
    "yt-dlp",
    "edge-tts>=7.2.0",
    "ffmpy==0.3.1",
    "ffmpeg-python>=0.2.0",
    "beautifulsoup4",
    
    # Tensorboard and ONNX
    "tensorboard",
    "onnx>=1.14",
    "onnxslim",
    "onnx2torch>=1.5.15",
    
    # Cryptography section
    "pycryptodome>=3.9.6,<4.0.0",
    
    # Realtime and VAD
    "sounddevice>=0.5.2",
    "webrtcvad-wheels>=2.0.14",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/ArkanDash/Advanced-RVC-Inference"
Repository = "https://github.com/ArkanDash/Advanced-RVC-Inference"
Issues = "https://github.com/ArkanDash/Advanced-RVC-Inference/issues"

[project.scripts]
advanced-rvc-inference = "advanced_rvc_inference.app:app"
