[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-rvc-inference"
version = "0.1.0"
description = "A state-of-the-art web UI for rapid and effortless inference using RVC"
readme = "README.md"
authors = [
    {name = "ArkanDash", email = "arkan@arkan.dev"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gradio>=4.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.21.0",
    "librosa>=0.9.0",
    "soundfile>=0.10.0",
    "pydub>=0.25.0",
    "pedalboard>=0.6.0",
    "audio-separator[gpu]>=0.10.0",
    "setuptools>=61.0",
    "wheel",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/ArkanDash/Advanced-RVC-Inference"
Repository = "https://github.com/ArkanDash/Advanced-RVC-Inference.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["advanced_rvc_inference*"]

[tool.setuptools]
include-package-data = true